@@ -474,6 +474,9 @@ MSW:
 - Center task dialog-based wxProgressDialog on the parent (John Roberts).
 - wxAutomationObject::GetInstance() creates objects on demand (Kolya Kosenko).
 
+OSX:
+
+- Implement switching to default video mode in wxDisplay (soren).
 
 
 2.9.1:
